tests/NormalTests/paczka1/small_fuzzy/86817199.err
Error in line 4: A576 A576 301,4
Error in line 6: A576 A872 28,02
